assets/css/style.css
/* h2 used for my name */

/* h1 used for page name */

/* h3 used for connect with me */


h1,
h2,
h3 {
	font-family: 'Georgia', Times, Times New Roman, serif;
}

h2 {
	background-color: #4aaaa5;
	color: white;
	float: left;
	padding: 20px;
	font-weight: bold;
	font-size: 22px;
}

h1 {
	color: #4aaaa5;
	padding: 20px;
	font-weight: bold;
	font-size: 22px;
}

h3 {
	color: #4aaaa5;
	padding: 10px;
	font-weight: bold;
	font-size: 20px;
}

header {
	background-color: #ffffff;
	border-bottom: #cccccc;
}



footer {
	background-color: #666666;
	clear: both;
}


body {
	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
	/* background-image: assets/images/background.png; */
	width: 960px;
	margin: auto;
}

a {
	color: #777777;
	text-decoration: none !important;
}

.links {
	float: right;
	padding: 15px;
	color: #dddddd;
}

.main {
	width: 650px;
	float: left;
	clear: both;
}



.side {
	width: 270px;
	float: left;
	background-color: red;
}

/*.container {
	box-sizing: border-box;
	margin: auto;
} */

